--- a/views/locations/locations.html
+++ b/views/locations/locations.html
@@ -41,30 +41,30 @@
             </div>
             <div class="row">
                 <div class="small-3 columns">
-                    <input type="text" placeholder="New Name" ng-model="new_location_name">
+                    <input type="text" placeholder="New Name" ng-model="new_location.name">
                 </div>
                 <div class="small-3 columns">
-                    <input type="text" placeholder="Phone" ng-model="new_location_phone">
+                    <input type="text" placeholder="Phone" ng-model="new_location.phone">
                 </div>
                 <div class="small-3 columns">
-                    <input type="text" placeholder="Address" ng-model="new_location_address">
+                    <input type="text" placeholder="Address" ng-model="new_location.address">
                 </div>
                 <div class="small-3 column">
-                    <input type="text" placeholder="City" ng-model="new_location_city">
+                    <input type="text" placeholder="City" ng-model="new_location.city">
                 </div>
             </div>
             <div class="row">
                 <div class="small-3 column">
-                    <input type="text" placeholder="State" ng-model="new_location_state">
+                    <input type="text" placeholder="State" ng-model="new_location.state">
                 </div>
                 <div class="small-3 column">
-                    <input type="text" placeholder="Zip" ng-model="new_location_zip">
+                    <input type="text" placeholder="Zip" ng-model="new_location.zip">
                 </div>
                 <div class="small-3 columns">
-                    <input type="text" placeholder="Company id" ng-model="new_location_company_id">
+                    <input type="text" placeholder="Company id" ng-model="new_location.company_id">
                 </div>
                 <div class="small-3 columns">
-                    <input id="enabled" type="checkbox" ng-model="new_location_enabled">
+                    <input id="enabled" type="checkbox" ng-model="new_location.enabled">
                     <label for="enabled">Enabled</label>
                 </div>
             </div>
