added price on ingredient list, added price input when creating a new ingredient. added price to ingredient edit page. updated controller,service to update price.

--- a/views/ingredients/editIngredient.html
+++ b/views/ingredients/editIngredient.html
@@ -12,6 +12,9 @@
         <div class="small-3 columns">
             <input type="text" ng-model="selected_ingredient.unit" value="{{ selected_ingredient.unit }}">
         </div>
+        <div class="small-3 columns">
+            <input type="text" ng-model="selected_ingredient.price" value="{{ selected_ingredient.price }}">
+        </div>
         <div class="small-2 columns end">
             <input type="checkbox"
                 ng-model="selected_ingredient.enabled"
