--- a/views/companies/editCompany.html
+++ b/views/companies/editCompany.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <div class="small-12 columns"><h2>[Admin] Edit Company</h2></div>
+    <div class="small-12 columns"><h2>Admin Edit Company</h2></div>
 </div>
 
 <div ng-controller="companyEditController">
