--- a/views/locations/editLocation.html
+++ b/views/locations/editLocation.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="small-12 columns"><h2>[Admin] Edit Location</h2></div>
+    <div class="small-12 columns"><h2>Admin Edit Location</h2></div>
 </div>
 
 <div ng-controller="locationEditController">
