--- a/views/ingredients/editIngredient.html
+++ b/views/ingredients/editIngredient.html
@@ -20,8 +20,8 @@
         </div>
         <div class="small-3 columns">
             <input type="text"
-                ng-model="selected_ingredient.price"
-                value="{{ selected_ingredient.price }}"
+                ng-model="ingredient.price"
+                value="{{ ingredient.price }}"
                 placeholder="Price">
         </div>
         <div class="small-2 columns end">
