meal edit save is actually working.  fixed the increment buttons.  fixed the delete company bug

--- a/views/companies/editCompany.html
+++ b/views/companies/editCompany.html
@@ -5,19 +5,19 @@
 
 <div ng-controller="companyEditController">
     <div class="row">
-        <div class="small-4 columns" ng-show="selected_company.name">
-            <input type="text" ng-model="selected_company.name" value="{{ selected_company.name }}" >
+        <div class="small-4 columns" ng-show="company.name">
+            <input type="text" ng-model="company.name" value="{{ company.name }}" >
         </div>
         <div class="small-2 columns end">
-            <input type="checkbox" ng-true-value="1" ng-false-value="0" ng-model="selected_company.enabled">
+            <input type="checkbox" ng-true-value="1" ng-false-value="0" ng-model="company.enabled">
             <label>Enabled</label>
         </div>
     </div>
     <div class="row">
         <div class="small-6 columns">
-            <button ng-click="updateCompany()">Save</button>
+            <button ng-click="updateCompany(company.id)">Save</button>
             <a href="#companies" class="button">Cancel</a>
-            <button class="button alert" ng-click="deleteCompany(seleted_company.id)">Delete!</button>
+            <button class="button alert" ng-click="deleteCompany(company.id)">Delete!</button>
         </div>
     </div>
 </div>
